Fix spacing in teams.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,10 @@ html {
   color: #212529;
 }
 
+.media-body{
+  padding-bottom: 20px;
+}
+
 ul li {
   text-align: center;
   display: inline;
@@ -80,24 +84,24 @@ ul.text-center {
   font-weight: bold;
   font-size: xx-large;
   color: #2C3D17;
-}
+  }
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 /* Wrapper for page content to push down footer */
 #wrap {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  /* Negative indent footer by it's height */
-  margin: 0 auto -30px;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -30px;
 }
 
 /* Push footer down */
-#push {
+#push{
   height: 20px;
 }
 
@@ -108,12 +112,12 @@ body {
 
 /* Responsive footer */
 @media (max-width: 767px) {
-  footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+    footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 #about-text {
@@ -123,9 +127,10 @@ body {
   text-align: justify;
   display: inline-block;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom:20px;
   position: absolute;
 }
+
 
 #map {
   display: inline-block;
